--- a/SourceCode/vajrang/Nov 2022/Week4/purchase order/ProcurementAnywhere/PA_SearchPoNumber.xaml
+++ b/SourceCode/vajrang/Nov 2022/Week4/purchase order/ProcurementAnywhere/PA_SearchPoNumber.xaml
@@ -1,12 +1,9 @@
 <Activity mc:Ignorable="sap sap2010" x:Class="PA_SearchPoNumber" this:PA_SearchPoNumber.in_PO_number="03-594-3533" this:PA_SearchPoNumber.In_PaUrl="https://developer.automationanywhere.com/challenges/AutomationAnywhereLabs-POtrackingLookup.html" xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:sap="http://schemas.microsoft.com/netfx/2009/xaml/activities/presentation" xmlns:sap2010="http://schemas.microsoft.com/netfx/2010/xaml/activities/presentation" xmlns:scg="clr-namespace:System.Collections.Generic;assembly=System.Private.CoreLib" xmlns:sd="clr-namespace:System.Data;assembly=System.Data.Common" xmlns:this="clr-namespace:" xmlns:ui="http://schemas.uipath.com/workflow/activities" xmlns:uix="http://schemas.uipath.com/workflow/activities/uix" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
     <x:Property Name="in_PO_number" Type="InArgument(x:String)" />
-    <x:Property Name="Out_DtPoRecord" Type="InArgument(sd:DataTable)" />
+    <x:Property Name="Out_DtPoRecord" Type="OutArgument(sd:DataTable)" />
     <x:Property Name="In_PaUrl" Type="InArgument(x:String)" />
   </x:Members>
-  <this:PA_SearchPoNumber.Out_DtPoRecord>
-    <InArgument x:TypeArguments="sd:DataTable" />
-  </this:PA_SearchPoNumber.Out_DtPoRecord>
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
