Created a text file

--- a/SourceCode/vajrang/Nov 2022/Week4/purchase order/ProcurementAnywhere/PA_SearchPoNumber.xaml
+++ b/SourceCode/vajrang/Nov 2022/Week4/purchase order/ProcurementAnywhere/PA_SearchPoNumber.xaml
@@ -140,7 +140,7 @@
                 <uix:TargetAnchorable DesignTimeRectangle="38, 584, 885, 138" DesignTimeScaleFactor="1" FriendlyName="'PO Number'" FullSelectorArgument="&lt;webctrl id='dtBasicExample' tag='TABLE' /&gt;" Guid="6311f26b-0c80-40eb-a4f5-9646fdf6c7cb" InformativeScreenshot="ad33945b9d8d572739edb185e87555e3.png" ScopeSelectorArgument="&lt;html app='chrome.exe' title='Automation Anywhere Labs - PO Tracking Lookup' /&gt;" SearchSteps="Selector" Version="V1" Visibility="Interactive" />
               </uix:NExtractData.Target>
             </uix:NExtractData>
-            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="358,101" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Extracted datatable &quot;+ Out_DtPoRecord.RowCount.ToString]" />
+            <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="358,101" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="Info" Message="[&quot;Extracted datatable Rows &quot;+ Out_DtPoRecord.RowCount.ToString]" />
           </Sequence>
         </ActivityAction>
       </uix:NApplicationCard.Body>
